--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -1597,7 +1597,13 @@
       ]
     },
     {
-
+      "cell_type": "code",
+      "source": [
+        "data.isna().sum()"
+      ],
+      "metadata": {
+        "id": "B_LiFwRlukSU"
+      },
       "execution_count": null,
       "outputs": []
     }
